@@ -1,0 +1,77 @@
+package FusionInventory::Agent::SNMP::MibSupport::LinuxAppliance;
+
+use strict;
+use warnings;
+
+use parent 'FusionInventory::Agent::SNMP::MibSupportTemplate';
+
+use FusionInventory::Agent::Tools;
+use FusionInventory::Agent::Tools::SNMP;
+
+use constant    enterprises => '.1.3.6.1.4.1' ;
+use constant    linux       => enterprises . '.8072.3.2.10' ;
+
+use constant    ucddavis    => enterprises  .'.2021' ;
+
+use constant    ucdExperimental => ucddavis  .'.13' ;
+
+# UCD-DLMOD-MIB DEFINITIONS
+use constant    ucdDlmodMIB => ucdExperimental .'.14' ;
+use constant    dlmodEntry  => ucdDlmodMIB .'.2.1' ;
+use constant    dlmodName   => dlmodEntry .'.2.1' ;
+
+our $mibSupport = [
+    {
+        name        => "linux",
+        sysobjectid => getRegexpOidMatch(linux)
+    }
+];
+
+sub getType {
+    my ($self) = @_;
+
+    my $device = $self->device
+        or return;
+
+    # Quescom detection
+    my $dlmodName = $self->get(dlmodName);
+    if ($dlmodName && $dlmodName eq 'QuesComSnmpObject') {
+        $device->{_Appliance} = {
+            MODEL           => 'QuesCom',
+            MANUFACTURER    => 'QuesCom'
+        };
+        return 'NETWORKING';
+    }
+}
+
+sub getModel {
+    my ($self) = @_;
+
+    my $device = $self->device
+        or return;
+
+    return unless $device->{_Appliance} && $device->{_Appliance}->{MODEL};
+    return $device->{_Appliance}->{MODEL};
+}
+
+sub getManufacturer {
+    my ($self) = @_;
+
+    my $device = $self->device
+        or return;
+
+    return unless $device->{_Appliance} && $device->{_Appliance}->{MANUFACTURER};
+    return $device->{_Appliance}->{MANUFACTURER};
+}
+
+1;
+
+__END__
+
+=head1 NAME
+
+Inventory module for Linux Appliances
+
+=head1 DESCRIPTION
+
+The module tries to enhance the Linux Appliances support.
